--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^13.2.2
+  from_css_color: ^2.0.0
 
 dev_dependencies:
   flutter_test:
