--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^13.2.2
   from_css_color: ^2.0.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
