feat: get json from dio request

--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   go_router: ^13.2.2
   from_css_color: ^2.0.0
   get: ^4.6.6
+  dio: ^5.4.2+1
+  json_annotation:
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +50,9 @@ dev_dependencies:
     sdk: flutter
   test: any
   flutter_lints: ^2.0.0
+  json_model:
+  build_runner: ^2.4.9
+  json_serializable: ^6.7.1
 
 # The following section is specific to Flutter packages.
 flutter:
