--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dio: ^5.4.2+1
   json_annotation:
   intl: ^0.17.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
