--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   intl: ^0.18.0
   auto_size_text: ^3.0.0
   cached_network_image: ^3.3.1
+  sqflite: ^2.3.2
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
